# metro-navigation-public

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  LICENSING.md  MANIFEST.in  README.md  REPRODUCIBILITY.md  benchmark_components.py  main.py  pyproject.toml
.github/workflows/: ci.yml
draft/: DBSCAN.py  RANSAC.py  delete_noname_images.py  metro_dataset.py  metro_train.py  split_dataset&convert.py  train_aug.py  train_metro.ipynb
models/: README.md  SHA256SUMS.txt
models/weights/: segformer.pt  yolo11m.pt  yoloOCR.pt
src/metro_navigation/: __init__.py  benchmark.py  cli.py  config.py  domain.py  pipeline.py  visualization.py
src/metro_navigation/core/: __init__.py  fusion.py
src/metro_navigation/models/: __init__.py  object_detector.py  segmenter.py  sign_detector.py
src/metro_navigation/utils/: __init__.py  clock.py  speech.py
tests/: test_clock.py  test_fusion.py  test_segmentation_state.py
